<resources>
    <string name="app_name">CovidCare</string>
    <string name="tab_home">Dashboard</string>
    <string name="tab_guide">Guide</string>
    <string name="tab_about">About</string>
    <string name="tab_cybage">Cybage</string>
    <string name="desc_icon_share">icon_share</string>
    <string name="desc_app_icon">appIcon</string>
    <string name="text_confirmed">Confirmed</string>
    <string name="text_recovered">Recovered</string>
    <string name="text_deceased">Deceased</string>
    <string name="text_death">Death</string>
    <string name="text_india">India</string>
    <string name="text_world">World</string>
    <string name="text_null">null</string>
    <string name="text_all_countries">All Countries</string>
    <string name="text_all_state">All State</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="value_empty">--</string>
    <string name="text_active">Active</string>
    <string name="text_image_desc">flag image of Country</string>
    <string name="text_login_with_number">Login With Phone Number</string>
    <string name="text_more_feature">For More Features</string>
    <string name="text_desc_about">desc_about</string>
    <string name="text_desc_header">desc_header</string>
    <string name="text_signin">Sign In</string>
    <string name="text_login">Login</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_otp">OTP</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_go">GO</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_logout">Log Out</string>
    <string name="text_help_line">Help Line</string>
    <string name="text_self_assist">Self Assist</string>
    <string name="text_feed">Feed</string>
    <string name="text_desc_image_cybage">desc_image_cybage</string>
    <string name="text_alert_internet">Check Internet Connection</string>
    <string name="text_share_message">"Download Covid Care app from this link.Android: https://drive.google.com/file/d/1RfD4-r5sYtkV5bWx78h8JuqecmIlaRRj/view?usp=sharing</string>
    <string name="text_dry_cough">Dry cough</string>
    <string name="text_covid_common_symptoms">COVID common symptoms</string>
    <string name="text_less_common_symptoms">Less common symptoms</string>
    <string name="text_tiredness">Tiredness</string>
    <string name="text_less_common_value">• Aches and pains\n• Sore throat\n• Diarrhoea\n• Conjunctivitis\n• Headache\n• Loss of taste or smell\n• A rash on skin\n• Discolouration of fingers or toes</string>
    <string name="text_do_s">DO\'s</string>
    <string name="text_hand_wash">Hand Wash</string>
    <string name="text_hand_hash_desc">Regular hand wash for 20 seconds will help you avoid germs or any kind of infection.</string>
    <string name="desc_image_hand_wash">image_hand_wash</string>
    <string name="text_cover_your_mouth_nose"><![CDATA[Cover Your Mouth and Nose]]></string>
    <string name="text_cover_nose_desc">Covering your mouth and nose while sneezing or when anyone next to coughs or sneezes can do you a lot better.</string>
    <string name="desc_image_cover_nose">image_cover_nose</string>
    <string name="text_consult_a_doctor_if_sick">Consult A Doctor If Sick</string>
    <string name="text_consult_doctor_value">If you are suffering from a common cold, cough, nausea, vomiting, shortness of breath and fatigue make it a point to consult a doctor at the earliest.</string>
    <string name="text_stay_indoors">Stay Indoors</string>
    <string name="text_stay_indoors_value">Avoid being in crowded places. An infected person can spread the virus instantly and crowded places is a good way to accomplish this.</string>
    <string name="desc_image_stay_indoor">image_stay_indoor</string>
    <string name="desc_image_consult_doctor">image_consult_doctor</string>
    <string name="text_don_t_touch_your_face">Don’t Touch Your Face</string>
    <string name="text_donot_touch_face_value">Do not touch your face, nose and mouth often. This avoids the risks of developing the virus.</string>
    <string name="desc_image_donot_touch_face">image_donot_touch_face</string>
    <string name="text_avoid_close_contact">Avoid Close Contact</string>
    <string name="text_avaoid_close_contact_value">Do not get close to anyone, especially touching or laughing closely. Also, use anti-pollution masks when out with friends or family.</string>
    <string name="desc_image_hand_shake">image_hand_shake</string>
    <string name="text_do_not_spit">Do Not Spit</string>
    <string name="text_donot_spite_value">Spitting can increase the spread of the virus.Avoid spiting at in public and home.Avoid getting close to a sick person suffering from cold and cough.</string>
    <string name="desc_image_donot_spite">image_donot_spite</string>
    <string name="text_don_t_panic_take_it_easy">Don’t Panic, Take It Easy</string>
    <string name="text_donot_panic_value">Most often a state of fear can lead to taking wrong decisions and use of self-medication. All you need to keep in mind is hygiene.</string>
    <string name="desc_image_corona">image_corona</string>
    <string name="text_don_ts">Don\'ts</string>
    <string name="text_guidelines">Psychological guidelines</string>
    <string name="stay_safe">• Isolate yourself from news about the virus. (Everything we need to know, we already know).
        \n\n• Don\'t look out for death toll. It\'s not a cricket match to know the latest score. Avoid that.
        \n\n• Don\'t look for additional information on the Internet, it would weaken your mental state.
        \n\n• Avoid sending fatalistic messages. Some people don\'t have the same mental strength as you (Instead of helping, you could activate pathologies such as depression).
        \n\n• If possible, listen to music at home at a pleasant volume. Look for board games to entertain children, tell stories and future plans.
        \n\n• Maintain discipline in the home by washing your hands, putting up a sign or alarm for everyone in the house.
        \n\n• Your positive mood will help protect your immune system, while negative thoughts have been shown to depress your immune system and make it weak against viruses.
        \n\n• Most importantly, firmly believe that this shall also pass and we will be safe.... !
        \n\n\nStay mentally positive...Stay safe!</string>
    <string name="text_verify">Verify</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="call_for_enter_otp">Please enter otp</string>
    <string name="call_for_proper_mobile_number">Please enter valid mobile number</string>
    <string name="call_for_user_name">Please enter user name</string>
    <string name="verification_failed">Something went wrong</string>
    <string name="firebase_invalid_request">Invalid Request</string>
    <string name="firebase_request_failed">Request Failed</string>
    <string name="firebase_SMS_Quota">The SMS quota for the project has been exceeded</string>
    <string name="please_enter_mobile_number_to_n_receive_a_verification_code">Please enter mobile number to \n receive a verification code.</string>
    <string name="text_otp_verification">OTP has been sent to your \n mobile number.Please enter it.</string>
    <string name="text_hint_name">Name</string>
    <string name="btn_text_resend">Resend</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="not_registered_number">Number not registered with Cybage</string>
    <string name="firebase_application_id">"1:819897549222:android:2a661a39af938304140f67"</string>
    <string name="desc_content_desc">imageContentDesc</string>
    <string name="text_link">Link:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_sample">SampleActivity</string>
    <string name="notification_intent_extra_name">notificationDetailsFragment</string>
    <string name="notification_data_id">notification_data_id</string>
    <string name="notification_intent_extra_value">notificationMenuItem</string>
    <string name="notification_channel_id">CovidCareChannel_01</string>
    <string name="notification_channel_name">name</string>
    <string name="text_just_a_call">Just a call</string>
    <string name="text_drop_a_query">Drop a query</string>
    <string name="text_helplines">Helplines</string>
    <string name="text_loading_helpline_numbers">Loading Helpline Numbers...</string>
    <string name="text_city1">City1</string>
    <string name="text_city3">City3</string>
    <string name="text_city2">City2</string>
    <string name="desc_image_arrow_down">image_arrow_down</string>
    <string name="text_we_ve_made_changes_to_our_terms_of_service_and_privacy_policy_they_take_effect_on_september_1_2020_and_we_encourage_you_to_review_them_by_continuing_to_use_our_services_you_agree_to_the_new_terms_of_service_and_acknowledge_the_privacy_policy_applies_to_you">We’ve made changes to our Terms of Service and Privacy Policy. They take effect on September 1, 2020, and we encourage you to review them. By continuing to use our services, you agree to the new Terms of Service and acknowledge the Privacy Policy applies to you.</string>
    <string name="text_helpline_numbers">Helpline Numbers</string>
    <string name="text_fill_the_below_details_and_we_will_help_you_in_next_24_hours">Fill the below details and we will help you in next 24 hours</string>
    <string name="text_drop_us_a_query">Drop us a query</string>
    <string name="text_username">Username</string>
    <string name="text_submit">Submit</string>
    <string name="text_name">Name</string>
    <string name="text_employee_id">Employee ID</string>
    <string name="text_mobile_number">Mobile Number</string>
    <string name="text_query">Query</string>
    <string name="que_one_are_you_experiencing_any_of_the_following_symptoms">Are you experiencing any of the following symptoms?</string>
    <string name="text_cough">Cough</string>
    <string name="text_fever">Fever</string>
    <string name="text_loss_of_taste_and_smell">Loss of taste and smell</string>
    <string name="text_difficulty_in_breathing">Difficulty in breathing</string>
    <string name="text_none_of_the_above">None of the above</string>
    <string name="que_two_have_you_ever_had_any_of_the_following">Have you ever had any of the following?</string>
    <string name="text_diabetes">Diabetes</string>
    <string name="text_hypertension">Hypertension</string>
    <string name="text_lung_disease">Lung Disease</string>
    <string name="text_heart_disease">Heart Disease</string>
    <string name="text_kidney_disorder">Kidney Disorder</string>
    <string name="text_next">Next</string>
    <string name="text_answer_text">Answer Text</string>
    <string name="que_three_have_you_travelled_anywhere_internationally_in_last_28_45_days">Have you travelled anywhere internationally in last 28-45 days?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="que_four_which_of_the_following_apply_to_you">Which of the following apply to you?</string>
    <string name="text_i_am_a_healthcare_worker_and_i_examined_a_covid_19_confirmed_case_without_protective_gear">I Am a healthcare worker and I examined a COVID-19 confirmed case without protective gear</string>
    <string name="que_five_which_of_the_following_apply_to_you">Which of the following apply to you?</string>
    <string name="text_travelled_internationally_in_last_14_days">Travelled internationally in last 14 days</string>
    <string name="text_recently_interacted_or_lived_or_currently_living_with_someone_who_has_tested_positive_for_covid_19">Recently interacted or lived or currently living with someone who has tested positive for COVID 19</string>
    <string name="text_am_a_healthcare_worker">Am a healthcare worker</string>
</resources>