<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_details_state_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_horizontal"
            android:text="@string/value_empty"
            android:textColor="@color/app_text_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayoutBar"
            android:layout_width="0dp"
            android:layout_height="267dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/graph_layout"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/list_of_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutPie"
            app:layout_constraintVertical_bias="0.054">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="2dp" />

            <RadioGroup
                android:id="@+id/radioGroupDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rad_btn_conf"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="20dp">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rad_btn_conf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/app_text_color"
                    android:text="@string/text_confirmed"
                    android:textColor="@color/app_text_color"
                    android:textSize="12sp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rad_btn_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/app_text_color"
                    android:text="@string/text_active"
                    android:textColor="@color/app_text_color"
                    android:textSize="12sp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rad_btn_recover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/app_text_color"
                    android:text="@string/text_recovered"
                    android:textColor="@color/app_text_color"
                    android:textSize="12sp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rad_btn_death"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/app_text_color"
                    android:text="@string/text_deceased"
                    android:textColor="@color/app_text_color"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_of_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutBar" />

        <LinearLayout
            android:id="@+id/linearLayoutPie"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:background="@drawable/graph_layout"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_details_state_name">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="18dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>